<resources>
    <string name="app_name">BITUnion</string>

    <!-- Common -->
    <string name="title_warning">警告</string>
    <string name="button_confirm">确定</string>
    <string name="button_remind">提醒</string>
    <string name="button_cancel">取消</string>
    <string name="button_yes">是</string>
    <string name="button_no">否</string>
    <string name="button_draft">保存</string>
    <string name="button_exit">丢弃</string>
    <string name="activity_success">success</string>
    <string name="activity_failure">failure</string>
    <string name="press_back_to_exit">再次按下返回键退出应用</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="access_from_out_school">外网访问</string>
    <string name="update_session_success">更新会话成功</string>
    <string name="logout_info">确定登出系统？</string>

    <!-- Feedback -->
    <string name="prompt_email">您的邮箱</string>
    <string name="prompt_feedback">内容</string>
    <string name="message_success_add_feedback">你的建议已经发给开发者，非常感谢！</string>
    <string name="message_error_add_feedback">发送反馈失败，请稍后重试</string>
    <string name="message_donate">做这个应用纯属业余爱好，除了时间精力的付出之外，自己还承担了 Google 开发者账号、服务器和域名的费用，不多，问题不大。\n\n当然，感谢你的支持，感谢你的咖啡，我今天心情应该会很好 :D</string>


    <!-- New Post & Drafts -->
    <string name="message_new_post_success">发表回复成功</string>
    <string name="message_save_draft_success">已成功存至草稿箱</string>
    <string name="message_clear_drafts">是否清空草稿箱？</string>
    <string name="error_fetch_draft_list">获取草稿列表数据失败</string>
    <string name="error_fetch_draft_data">获取草稿数据失败</string>
    <string name="error_save_draft">保存草稿失败</string>
    <string name="error_clear_drafts">清空草稿箱失败</string>
    <string name="error_new_post_save_draft_success">发布帖子失败，已存为草稿</string>
    <string name="error_new_post_save_draft_failure">发布帖子失败，无法存为草稿</string>

    <!-- Error message -->
    <string name="error_title">错误</string>
    <string name="error_insert_attachment">插入附件失败</string>
    <string name="error_open_attachment">找不到合适的应用打开该附件</string>
    <string name="error_invalid_password">密码不得为空</string>
    <string name="error_field_required">用户名不得为空</string>
    <string name="error_subject_required">主题不得为空</string>
    <string name="error_message_length_short">回帖内容不得少于 3 个字</string>
    <string name="error_wrong_password">用户名或者密码错误</string>
    <string name="error_network">连接服务器发生异常</string>
    <string name="error_parse_json">解析服务器返回数据失败</string>
    <string name="error_forum_need_password">该板块需要密码，暂时不能访问</string>
    <string name="error_forum_no_permission">你没有权限访问该板块</string>
    <string name="error_thread_permission_need">你没有权限访问该主题</string>
    <string name="error_unknown_msg">服务器返回未知错误</string>
    <string name="error_user_not_exists">用户不存在</string>
    <string name="error_negative_credit">积分为负，拉取数据失败</string>
    <string name="error_login_negative_credit">积分为负，不允许登录</string>
    <string name="error_no_storage_permission">无法读取外部存储，请检查是否具备相应的权限</string>
    <string name="error_storage_file_not_found">存储图片失败，请检查文件是否存在</string>
    <string name="error_download_image">下载图片失败，请检查网络</string>
    <string name="error_no_permission">没有文件写入权限，保存图片失败</string>
    <string name="error_no_new_events">哎呀并没有动态</string>
    <string name="error_no_new_threads">哎呀并没有发帖记录</string>
    <string name="error_no_notifications">哎呀并没有通知消息</string>
    <string name="error_no_drafts">哎呀草稿箱是空的</string>
    <string name="error_no_new_posts">哎呀并没有回复记录</string>
    <string name="error_no_search_result">哎呀并没有搜索结果</string>
    <string name="error_no_following">哎呀并没有关注任何用户</string>
    <string name="error_no_favorites">哎呀并没有收藏</string>
    <string name="error_remove_avatar_cache">删除本地图片缓存失败</string>
    <string name="error_unknown">未知错误</string>

    <!-- Warning -->
    <string name="warning_reset_display_setting">自定义配置将会丢失，是否还原到默认设置？</string>

    <!-- File Download -->
    <string name="success_download_image">保存图片成功</string>
    <string name="downloading_image">正在下载并保存图片</string>

    <!-- Actions -->
    <string name="action_broadcast_mark_as_read">BU_MARK_AS_READ_KEY</string>

    <string name="action_offline">离线首页数据</string>
    <string name="action_settings">设置</string>
    <string name="action_home">首页</string>
    <string name="action_forum">板块</string>
    <string name="action_focus">关注</string>
    <string name="action_logout">登出</string>
    <string name="action_retry">重试</string>
    <string name="action_refresh">刷新</string>
    <string name="action_send">提交</string>
    <string name="action_drafts">草稿箱</string>
    <string name="action_inbox">消息盒</string>
    <string name="action_check_all">全部标为已读</string>
    <string name="action_remove_drafts">删除所有草稿</string>
    <string name="action_manage_focus">关注列表</string>
    <string name="action_copy_code">复制代码</string>
    <string name="action_follow">关注</string>
    <string name="action_reply">回帖</string>
    <string name="action_jump">跳转</string>
    <string name="action_copy_thread_link">复制链接</string>
    <string name="action_jump_to_thread_list">跳到板块</string>
    <string name="action_jump_to_head">跳到首页</string>
    <string name="action_jump_to_end">跳到末页面</string>
    <string name="action_deleted">Deleted</string>
    <string name="action_remove_following">已经取消关注用户</string>

    <string name="action_add_image_attachment">添加图片</string>
    <string name="action_add_file_attachment">添加文件</string>
    <string name="action_view_image_attachment">查看图片</string>
    <string name="action_remove_image_attachment">移除图片</string>
    <string name="action_view_file_attachment">查看附件</string>
    <string name="action_remove_file_attachment">移除附件</string>

    <string name="action_forum_add_favor">添加收藏</string>
    <!-- Default Title -->
    <string name="title_activity_login">登录</string>
    <string name="title_activity_post_list">主题列表</string>
    <string name="title_activity_preview">预览</string>
    <string name="title_activity_focus">关注</string>
    <string name="title_activity_profile">资料</string>
    <string name="title_activity_thread_detail_new">主题列表</string>
    <string name="title_activity_fullscreen_photo_viewer">照片浏览器</string>
    <string name="title_activity_better_post">发布回复</string>
    <string name="title_new_post">发布回复</string>
    <string name="title_new_thread">发布主题</string>
    <string name="title_activity_with_framelayout">无标题</string>
    <string name="title_activity_search">搜索</string>
    <string name="title_activity_draft_list">草稿箱</string>
    <string name="title_activity_draft_list_new_post">草稿箱（回帖）</string>
    <string name="title_activity_draft_list_new_thread">草稿箱（新帖）</string>
    <string name="title_activity_new_following_list">关注页面</string>
    <string name="title_activity_forum_list">板块</string>
    <string name="title_activity_preference">设置</string>
    <string name="title_activity_notification_box">通知列表</string>
    <string name="title_activity_feedback">意见反馈</string>
    <string name="message_fetch_host">正在获取最新外网地址</string>
    <string name="error_message_fetch_host">获取外网地址失败</string>

    <!-- Editor -->
    <string name="message_exit_editor">帖子内容不为空，是否保存为草稿？</string>
    <string name="processing_attachment">正在处理附件</string>


    <!-- Notification -->
    <string name="message_mark_all_as_read">是否将所有未读消息标记为已读？</string>

    <!-- font -->
    <string name="bell_icon">&#xe61d;</string>
    <string name="search_icon">&#xe61b;</string>
    <string name="title_activity_debug">调试页面</string>
    <string name="title_activity_code_view">CodeViewActivity</string>

    <!-- Analytics -->
    <string name="application_init_id">APPLICATION_INIT</string>
    <string name="application_version">APPLICATION_VERSION</string>
    <string name="application_device">APPLICATION_DEVICE</string>
    <string name="application_username">APPLICATION_USERNAME</string>

</resources>
