<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favor"
        android:icon="@drawable/ic_star_border_white_24dp"
        android:orderInCategory="80"
        android:title="@string/action_follow"
        app:showAsAction="always" />

    <item
        android:id="@+id/jump_to_page"
        android:orderInCategory="81"
        android:title="@string/action_jump"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_jump_to_head"
        android:orderInCategory="82"
        android:title="@string/action_jump_to_head"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_jump_to_tail"
        android:orderInCategory="83"
        android:title="@string/action_jump_to_end"
        app:showAsAction="never" />
</menu>