<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:orderInCategory="100"
            android:title="@string/action_home"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_forum"
            android:orderInCategory="100"
            android:title="@string/action_forum"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_topic"
            android:orderInCategory="100"
            android:title="@string/action_topic"
            app:showAsAction="never" />
    </group>

    <item android:title="Sub items">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:orderInCategory="100"
                android:title="@string/action_settings"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
