<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_add_attachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/layout_add_image"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true">

            <TextView
                android:id="@+id/attachment_image_filename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:text="@string/action_add_image_attachment"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_add_file"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true">

            <TextView
                android:id="@+id/attachment_image_file_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:text="@string/action_add_file_attachment"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_mod_attachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">

            <TextView
                android:id="@+id/tv_file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:maxEms="15"
                android:paddingLeft="24dp"
                android:singleLine="true"
                android:text="LONG LONG LONG LONG FileName.jpg"
                android:textColor="@color/primary_dark"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <include layout="@layout/item_divider" />

        <LinearLayout
            android:id="@+id/layout_view_attachment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true">

            <TextView
                android:id="@+id/tv_view_attachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:text="@string/action_view_image_attachment"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_remove_attachment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true">

            <TextView
                android:id="@+id/tv_remove_attachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:text="@string/action_remove_image_attachment"
                android:textColor="#FF0000"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>